<resources>
    <string name="app_name">Client_MVP</string>
    <string name="failtag">fail</string>

    <!-- shared preferences -->
    <string name="preference_file_key">com.example.jonathan.client_mvp.PREFERENCE_KEY</string> <!-- For sign in -->
    <string name="preference_server_key">com.example.jonathan.client_mvp.SERVER_KEY</string> <!-- For server config -->

    <!-- Sign in screen, IPlabel and Portlabel are for the employee server -->
    <string name="Welcome">Welcome!</string>
    <string name="IPlabel">Server IP</string>
    <string name="Portlabel">Server Port</string>
    <string name="userlabel">Username</string>
    <string name="passlabel">Password</string>
    <string name="autolog">Auto sign in</string>
    <string name="card">Card_id</string>
    <string name="sign_in">Sign in</string>

    <!-- url strings -->
    <string name="http">http://</string>
    <string name="localIP">10.0.2.2</string>
    <string name="s_local">localhost</string>
    <string name="serverIP">10.0.2.2</string>
    <string name="serverPort">:8080</string>
    <string name="phpFolder">/android_connect/</string>
    <string name="imgFolder">/door_app_images/</string>

    <!-- url php scripts -->
    <string name="icon_scr">db_get_icons.php</string>
    <string name="floor_scr">get_all_floors.php</string>
    <string name="door_scr">get_all_doors.php</string>
    <string name="image_scr">db_getImages.php</string>
    <string name="validate_scr">validateLogin.php</string>
    <!-- /url strings -->

    <!-- JSON node names -->
    <string name="j_success">success</string>
    <!-- image columns -->
    <string name="j_imgIcons">door_icons</string>
    <string name="j_imgPID">idimg</string>
    <string name="j_imgNm">nm_img</string>
    <string name="j_imgPath">path_img</string>
    <!-- /image columns -->
    <!-- floor columns -->
    <string name="j_arrFloor">arr_floor_rows</string>
    <string name="j_flrPID">idfloor</string>
    <string name="j_flrNm">nm_floor</string>
    <string name="j_flrOR">or_floor</string>
    <string name="j_flrPath">img_path</string>
    <string name="j_flrDr">iddoor</string>
    <!-- /floor columns -->
    <!-- door columns, match JSON keys -->
    <string name="j_arrDr">arr_doors</string>
    <string name="j_drPID">iddr</string>
    <string name="j_drNm">nm_door</string>
    <string name="j_drID">iddoor</string>
    <string name="j_drML">MarginLeft</string>
    <string name="j_drMT">MarginTop</string>
    <string name="j_drMR">MarginRight</string>
    <string name="j_drMB">MarginBot</string>
    <string name="j_drIP">IP_door</string>
    <string name="j_drPort">dev_port</string>
    <string name="j_drDevName">dev_remName</string>
    <string name="j_drDevMAC">dev_MAC</string>
    <!-- /door columns -->
    <!-- /JSON node names -->

    <string name="title_activity_log_in_one_time">LogIn_oneTIme</string>


    <!-- Floor screen buttons -->
    <string name="s_btn_lvlUp">Level Up</string>
    <string name="s_btn_lvlDn">Level Down</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Change server setting strings -->
    <string name="ser_dialogTitle">Change server settings</string>
    <string name="ser_instruct">(Replace fields you wish to change, leave blank to keep current)</string>
    <string name="ser_IPtxt">Server IP</string>
    <string name="ser_Pttxt">Server Port</string>
    <string name="ser_cancel">Cancel</string>
    <string name="ser_apply">Apply</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_floor">FloorActivity</string>

</resources>
